--- a/main.ipynb
+++ b/main.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\code\\deep leanring projects\\pytorch\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "\n",
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +58,7 @@
        "False"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,9 +80,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['what', 'are', 'you', 'doing', 'here', '?']\n"
+     ]
+    }
+   ],
    "source": [
     "def processText(text):\n",
     "    text = text.lower()\n",
@@ -81,35 +98,210 @@
     "\n",
     "    print(word)\n",
     "\n",
-    "processText('')"
+    "processText('what are you doing here?')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "iterating through files and storing the tokanized vesrion in the new path loc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lemmatizer = WordNetLemmatizer()"
+    "import os\n",
+    "\n",
+    "txt_paths = []\n",
+    "for root, dirs, files in os.walk('txt'):\n",
+    "    for file in files:\n",
+    "        if file[0] != '.':\n",
+    "            file_path = os.path.join(root, file)\n",
+    "            txt_paths.append(file_path)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'no'"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "LINCOLN LETTERS\n",
+      "\n",
+      "By Abraham Lincoln\n",
+      "\n",
+      "\n",
+      "Published by The Bibilophile Society\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "NOTE\n",
+      "\n",
+      "The letters herein by Lincoln are so thoroughly characteristic of\n",
+      "the man, and are in themselves so completely self-explanatory, that\n",
+      "it requires no comment to enable the reader fully to understand and\n",
+      "appreciate them. It will be observed that the philosophical\n",
+      "admonitions in the letter to his brother, Johnston, were written on\n",
+      "the same sheet with the letter to his father.\n",
+      "\n",
+      "The promptness and decision with which Lincoln despatched the\n",
+      "multitudinous affairs of his office during the most turbulent\n",
+      "scenes of the Civil War are exemplified in his unequivocal order to\n",
+      "the Attorney-General, indorsed on the back of the letter of Hon.\n",
+      "Austin A. King, requesting a pardon for John B. Corner. The\n",
+      "indorsement bears even date with the letter itself, and Corner was\n",
+      "pardoned on the following day.\n",
+      "\n",
+      "\n",
+      "THE ORIGINALS FROM WHICH THE WITHIN FACSIMILES WERE MADE ARE IN THE\n",
+      "COLLECTION OF MR. WILLIAM K. BIXBY, AND THROUGH HIS COURTESY THEY\n",
+      "ARE REPRODUCED FOR MEMBERS OF THE BIBLIOPHILE SOCIETY\n",
+      "\n",
+      "\n",
+      "[Illustration: 01 TO HIS FATHER]\n",
+      "\n",
+      "\n",
+      "[Illustration: 02 TO HIS BROTHER]\n",
+      "\n",
+      "\n",
+      "[Illustration: 03 TO HIS BROTHER]\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Washington, Dec. 24th, 1848.\n",
+      "\n",
+      "My dear father:--\n",
+      "\n",
+      "Your letter of the 7th was received night before last. I very\n",
+      "cheerfully send you the twenty dollars, which sum you say is\n",
+      "necessary to save your land from sale. It is singular that you\n",
+      "should have forgotten a judgment against you; and it is more\n",
+      "singular that the plaintiff should have let you forget it so long,\n",
+      "particularly as I suppose you have always had property enough to\n",
+      "satisfy a judgment of that amount. Before you pay it, it would be\n",
+      "well to be sure you have not paid it; or, at least, that you can\n",
+      "not prove you have paid it. Give my love to Mother, and all the\n",
+      "connections.\n",
+      "\n",
+      "Affectionately your son,\n",
+      "\n",
+      "A. LINCOLN.\n",
+      "\n",
+      "\n",
+      "[Written on same page with above.]\n",
+      "\n",
+      "Dear Johnston:--\n",
+      "\n",
+      "Your request for eighty dollars, I do not think it best to comply\n",
+      "with now. At the various times when I have helped you a little, you\n",
+      "have said to me, \"We can get along very well now,\" but in a very\n",
+      "short time I find you in the same difficulty again. Now this can\n",
+      "only happen by some defect in your conduct. What that defect is, I\n",
+      "think I know. You are not _lazy_, and still you _are_ an _idler_. I\n",
+      "doubt whether since I saw you, you have done a good whole day's\n",
+      "work, in any one day. You do not very much dislike to work, and\n",
+      "still you do not work much, merely because it does not seem to you\n",
+      "that you could get much for it. This habit of uselessly wasting\n",
+      "time, is the whole difficulty; and it is vastly important to you,\n",
+      "and still more so to your children, that you should break this\n",
+      "habit. It is more important to them, because they have longer to\n",
+      "live, and can keep out of an idle habit before they are in it\n",
+      "easier than they can get out after they are in.\n",
+      "\n",
+      "You are now in need of some ready money; and what I propose is,\n",
+      "that you shall go to work, \"tooth and nail,\" for somebody who will\n",
+      "give you money for it. Let father and your boys take charge of\n",
+      "things at home--prepare for a crop, and make the crop; and you go\n",
+      "to work for the best money wages, or in discharge of any debt you\n",
+      "owe, that you can get. And to secure you a fair reward for your\n",
+      "labor, I now promise you that for every dollar you will, between\n",
+      "this and the first of next May, get for your own labor either in\n",
+      "money or in your own indebtedness, I will then give you one other\n",
+      "dollar. By this, if you hire yourself at ten dollars a month, from\n",
+      "me you will get ten more, making twenty dollars a month for your\n",
+      "work. In this, I do not mean you shall go off to St. Louis, or the\n",
+      "lead mines, or the gold mines, in California, but I mean for you to\n",
+      "go at it for the best wages you can get close to home, in Coles\n",
+      "County. Now if you will do this, you will soon be out of debt, and\n",
+      "what is better, you will have a habit that will keep you from\n",
+      "getting in debt again. But if I should now clear you out, next year\n",
+      "you will be just as deep in as ever. You say you would almost give\n",
+      "your place in Heaven for $70 or $80. Then you value your place in\n",
+      "Heaven very cheaply, for I am sure you can with the offer I make\n",
+      "you get the seventy or eighty dollars for four or five months'\n",
+      "work. You say if I furnish you the money you will deed me the\n",
+      "land, and if you don't pay the money back, you will deliver\n",
+      "possession--Nonsense! If you can't now live _with_ the land, how will\n",
+      "you then live without it? You have always been kind to me, and I do not\n",
+      "now mean to be unkind to you. On the contrary, if you will but follow my\n",
+      "advice, you will find it worth more than eight times eighty dollars to\n",
+      "you.\n",
+      "\n",
+      "Affectionately your brother,\n",
+      "\n",
+      "A. LINCOLN.\n",
+      "\n",
+      "\n",
+      "[Illustration: 04 TO GENERAL GRANT]\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Washington, April 30, 1864.\n",
+      "\n",
+      "Executive Mansion,\n",
+      "\n",
+      "Lieutenant-General Grant,--\n",
+      "\n",
+      "Not expecting to see you again before the spring campaign opens, I\n",
+      "wish to express, in this way, my entire satisfaction with what you\n",
+      "have done up to this time, so far as I understand it. The\n",
+      "particulars of your plans I neither know, or seek to know. You are\n",
+      "vigilant and self reliant; and, pleased with this, I wish not to\n",
+      "obtrude any constraints or restraints upon you. While I am very\n",
+      "anxious that any great disaster, or the capture of our men in great\n",
+      "numbers, shall be avoided, I know these points are less likely to\n",
+      "escape your attention than they would be mine. If there is anything\n",
+      "wanting which is within my power to give, do not fail to let me\n",
+      "know it.\n",
+      "\n",
+      "And now with a brave Army, and a just cause, may God sustain you.\n",
+      "\n",
+      "Yours very truly,\n",
+      "\n",
+      "A. LINCOLN.\n",
+      "\n",
+      "\n",
+      "\n",
+      "[Illustration: 05 REQUEST FOR A PARDON]\n",
+      "\n",
+      "\n",
+      "[Illustration: 06 REQUEST FOR A PARDON]\n",
+      "\n",
+      "\n",
+      "[Illustration: 07 APPROVAL OF A PARDON]\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "with open(txt_paths[0], 'r', encoding='utf-8') as txt:\n",
+    "    print(txt.read())"
+   ]
   },
   {
    "cell_type": "code",
