--- a/main.ipynb
+++ b/main.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -47,18 +47,16 @@
       "[nltk_data]   Package stopwords is already up-to-date!\n",
       "[nltk_data] Downloading package wordnet to\n",
       "[nltk_data]     C:\\Users\\texta\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n",
-      "[nltk_data] Error loading punklab: Package 'punklab' not found in\n",
-      "[nltk_data]     index\n"
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,8 +64,7 @@
    "source": [
     "nltk.download('punkt')\n",
     "nltk.download('stopwords')\n",
-    "nltk.download('wordnet')\n",
-    "nltk.download('punklab')"
+    "nltk.download('wordnet')"
    ]
   },
   {
