working on the tokanizer

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\code\\deep leanring projects\\pytorch\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "\n",
@@ -32,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -49,22 +40,13 @@
       "[nltk_data]     C:\\Users\\texta\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "nltk.download('punkt')\n",
     "nltk.download('stopwords')\n",
-    "nltk.download('wordnet')"
+    "nltk.download('wordnet')\n",
+    "nlp = spacy.load('en_core_web_sm')"
    ]
   },
   {
@@ -77,14 +59,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texts = ['No way this is going to work!!?? really?',\n",
+    "\"I hope you are wrong.\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['what', 'are', 'you', 'doing', 'here', '?']\n"
+      "[['no'], ['way'], ['this'], ['is'], ['going'], ['to'], ['work'], ['!'], ['!'], ['?'], ['?'], ['really'], ['?']]\n"
      ]
     }
    ],
@@ -92,17 +84,27 @@
     "def processText(text):\n",
     "    text = text.lower()\n",
     "    word = word_tokenize(text)\n",
+    "    \n",
+    "    spacy_tokens = []\n",
+    "    for token in nlp(text):\n",
+    "        spacy_tokens.append([token.text])\n",
+    "    print(spacy_tokens)\n",
     "\n",
-    "    print(word)\n",
-    "\n",
-    "processText('what are you doing here?')"
+    "processText(texts[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "iterating through files and storing the tokanized vesrion in the new path loc"
+    "#### iterating through files and storing the tokanized vesrion in the new path loc"
    ]
   },
   {
@@ -114,6 +116,7 @@
     "import os\n",
     "\n",
     "txt_paths = []\n",
+    "\n",
     "for root, dirs, files in os.walk('txt'):\n",
     "    for file in files:\n",
     "        if file[0] != '.':\n",
