ignored the unnecessary files

--- a/main.ipynb
+++ b/main.ipynb
@@ -90,7 +90,7 @@
     "        spacy_tokens.append([token.text])\n",
     "    print(spacy_tokens)\n",
     "\n",
-    "processText(texts[0])"
+    "processText(texts[0])\n"
    ]
   },
   {
