fixing the tokanizer

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,15 +69,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['no'], ['way'], ['this'], ['is'], ['going'], ['to'], ['work'], ['!'], ['!'], ['?'], ['?'], ['really'], ['?']]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'is': 0,\n",
+       " 'way': 1,\n",
+       " 'going': 2,\n",
+       " 'to': 3,\n",
+       " '!': 4,\n",
+       " '?': 5,\n",
+       " 'work': 6,\n",
+       " 'this': 7,\n",
+       " 'really': 8,\n",
+       " 'no': 9}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -87,17 +99,37 @@
     "    \n",
     "    spacy_tokens = []\n",
     "    for token in nlp(text):\n",
-    "        spacy_tokens.append([token.text])\n",
-    "    print(spacy_tokens)\n",
+    "        spacy_tokens.append(token.text)\n",
+    "    \n",
+    "    # creating a vocablry dict, token to ID mapping\n",
+    "    vocab = {}\n",
+    "    # print(spacy_tokens)\n",
+    "    for idx, token in enumerate(set(spacy_tokens)):\n",
+    "        vocab[token]=idx\n",
     "\n",
-    "processText(texts[0])\n"
+    "    return vocab, spacy_tokens\n",
+    "\n",
+    "processText(texts[0])[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mprocessText\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtexts\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[12], line 11\u001b[0m, in \u001b[0;36mprocessText\u001b[1;34m(text)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# creating a vocablry dict, token to ID mapping\u001b[39;00m\n\u001b[0;32m     10\u001b[0m vocab \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m---> 11\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m idx, token \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(\u001b[38;5;28;43mset\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mspacy_tokens\u001b[49m\u001b[43m)\u001b[49m, start\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m     12\u001b[0m     vocab[token]\u001b[38;5;241m=\u001b[39midx\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m vocab, spacy_tokens\n",
+      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'list'"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -109,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +345,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pytorch",
    "language": "python",
    "name": "python3"
   },
