using a transformer approach to save time

--- a/main.ipynb
+++ b/main.ipynb
@@ -69,25 +69,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'is': 0,\n",
-       " 'way': 1,\n",
-       " 'going': 2,\n",
-       " 'to': 3,\n",
-       " '!': 4,\n",
-       " '?': 5,\n",
-       " 'work': 6,\n",
-       " 'this': 7,\n",
-       " 'really': 8,\n",
-       " 'no': 9}"
+       "['no',\n",
+       " 'way',\n",
+       " 'this',\n",
+       " 'is',\n",
+       " 'going',\n",
+       " 'to',\n",
+       " 'work',\n",
+       " '!',\n",
+       " '!',\n",
+       " '?',\n",
+       " '?',\n",
+       " 'really',\n",
+       " '?']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,36 +104,26 @@
     "    for token in nlp(text):\n",
     "        spacy_tokens.append(token.text)\n",
     "    \n",
+    "    return spacy_tokens\n",
+    "\n",
+    "processText(texts[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#vocab token to id mapping\n",
+    "def adding vocab\n",
     "    # creating a vocablry dict, token to ID mapping\n",
     "    vocab = {}\n",
     "    # print(spacy_tokens)\n",
     "    for idx, token in enumerate(set(spacy_tokens)):\n",
     "        vocab[token]=idx\n",
-    "\n",
-    "    return vocab, spacy_tokens\n",
-    "\n",
-    "processText(texts[0])[0]"
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[13], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mprocessText\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtexts\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[12], line 11\u001b[0m, in \u001b[0;36mprocessText\u001b[1;34m(text)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# creating a vocablry dict, token to ID mapping\u001b[39;00m\n\u001b[0;32m     10\u001b[0m vocab \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m---> 11\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m idx, token \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(\u001b[38;5;28;43mset\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mspacy_tokens\u001b[49m\u001b[43m)\u001b[49m, start\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m     12\u001b[0m     vocab[token]\u001b[38;5;241m=\u001b[39midx\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m vocab, spacy_tokens\n",
-      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'list'"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "markdown",
