--- a/main.ipynb
+++ b/main.ipynb
@@ -69,32 +69,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['no',\n",
-       " 'way',\n",
-       " 'this',\n",
-       " 'is',\n",
-       " 'going',\n",
-       " 'to',\n",
-       " 'work',\n",
-       " '!',\n",
-       " '!',\n",
-       " '?',\n",
-       " '?',\n",
-       " 'really',\n",
-       " '?']"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def processText(text):\n",
     "    text = text.lower()\n",
@@ -116,13 +93,15 @@
    "outputs": [],
    "source": [
     "#vocab token to id mapping\n",
-    "def adding vocab\n",
+    "def vocab_mapping(list_of_tokens: list):\n",
+    "\n",
     "    # creating a vocablry dict, token to ID mapping\n",
     "    vocab = {}\n",
+    "\n",
     "    # print(spacy_tokens)\n",
     "    for idx, token in enumerate(set(spacy_tokens)):\n",
     "        vocab[token]=idx\n",
-    "\n"
+    "    return vocab"
    ]
   },
   {
@@ -147,6 +126,93 @@
     "        if file[0] != '.':\n",
     "            file_path = os.path.join(root, file)\n",
     "            txt_paths.append(file_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Exception",
+     "evalue": "stream did not contain valid UTF-8",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[26], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtokenizers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ByteLevelBPETokenizer\n\u001b[0;32m      4\u001b[0m tokenizer \u001b[38;5;241m=\u001b[39m ByteLevelBPETokenizer()\n\u001b[1;32m----> 6\u001b[0m \u001b[43mtokenizer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfiles\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtxt_paths\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvocab_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m20000\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmin_frequency\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mspecial_tokens\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m<s>\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m<pad>\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m</s>\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     10\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m<unk>\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     11\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m<mask>\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     12\u001b[0m \u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32md:\\code\\deep leanring projects\\pytorch\\Lib\\site-packages\\tokenizers\\implementations\\byte_level_bpe.py:98\u001b[0m, in \u001b[0;36mByteLevelBPETokenizer.train\u001b[1;34m(self, files, vocab_size, min_frequency, show_progress, special_tokens)\u001b[0m\n\u001b[0;32m     96\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(files, \u001b[38;5;28mstr\u001b[39m):\n\u001b[0;32m     97\u001b[0m     files \u001b[38;5;241m=\u001b[39m [files]\n\u001b[1;32m---> 98\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_tokenizer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfiles\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrainer\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtrainer\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mException\u001b[0m: stream did not contain valid UTF-8"
+     ]
+    }
+   ],
+   "source": [
+    "# using tokenizers library instead of nltk and spacy\n",
+    "\n",
+    "from tokenizers import ByteLevelBPETokenizer\n",
+    "tokenizer = ByteLevelBPETokenizer()\n",
+    "\n",
+    "tokenizer.train(files=txt_paths, vocab_size=20000, min_frequency=2, special_tokens=[\n",
+    "    \"<s>\",\n",
+    "    \"<pad>\",\n",
+    "    \"</s>\",\n",
+    "    \"<unk>\",\n",
+    "    \"<mask>\",\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' Warning this file has encoding errors'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\" Warning this file has encoding errors\"\n",
+    "# D:\\code\\deep leanring projects\\txt\\Henry David Thoreau___A Week on the Concord and Merrimack Rivers.txt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyautogui\n",
+    "pyautogui.hotkey('alt', 'tab')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer.save_model(\".\", 'hermes')"
    ]
   },
   {
